[gd_scene load_steps=21 format=3 uid="uid://b3p6gg1hw55v6"]

[ext_resource type="Script" uid="uid://gb774arxommp" path="res://elements/enemy/snake/ai_enemy_snake.gd" id="1_2ljk7"]
[ext_resource type="Script" uid="uid://ce2ub87idhed0" path="res://elements/enemy/snake/snake_movement.gd" id="1_au4vo"]
[ext_resource type="PackedScene" uid="uid://ywymskkj85vs" path="res://elements/vfx/vfx_explosion/vfx_explosion.tscn" id="2_6c0i1"]
[ext_resource type="PackedScene" uid="uid://biot2pkv6iuem" path="res://elements/enemy/snake/enemy_snake_body.tscn" id="2_k0yf1"]
[ext_resource type="PackedScene" uid="uid://unynobrnbcfy" path="res://elements/enemy/snake/enemy_snake_body_cannon.tscn" id="3_fpqv0"]
[ext_resource type="PackedScene" uid="uid://dsxpw55jcahf5" path="res://elements/enemy/snake/enemy_snake_body_laser.tscn" id="4_0b4rc"]
[ext_resource type="Script" uid="uid://b3g5atumyrird" path="res://systems/health/health.gd" id="6_mnrwv"]
[ext_resource type="PackedScene" uid="uid://dcvsfeuw6ov7v" path="res://elements/enemy/snake/enemy_snake_body_cannon_super.tscn" id="6_ug3r6"]
[ext_resource type="Resource" uid="uid://bpcww073hgdho" path="res://systems/screen/camera_shake_enemy_explosion.tres" id="7_yimok"]
[ext_resource type="Script" uid="uid://dj2x7ekyg32b7" path="res://systems/score/score_giver.gd" id="8_iacpf"]
[ext_resource type="Material" uid="uid://muf8tj8x4k6e" path="res://elements/enemy/snake/m_snake_skin.tres" id="9_oeujn"]
[ext_resource type="PackedScene" uid="uid://pyd0fomi47py" path="res://elements/enemy/snake/mesh/mesh_snake.tscn" id="11_wxjdb"]
[ext_resource type="Script" uid="uid://cr5xxhd04vkgu" path="res://addons/gap/api/accessibility_high_contrast_object.gd" id="12_gu6xa"]
[ext_resource type="Resource" uid="uid://dflrx5pen2nqi" path="res://elements/score/score_info_snake_head.tres" id="13_hfjy5"]

[sub_resource type="Curve" id="Curve_hfjy5"]
_data = [Vector2(0.505376, 0), 0.0, 0.0628048, 0, 0, Vector2(1, 1), 3.50725, 0.0, 0, 0]
point_count = 2

[sub_resource type="SphereShape3D" id="SphereShape3D_6nw2r"]
radius = 1.0

[sub_resource type="Curve" id="Curve_jelr0"]
_data = [Vector2(0, 0.241061), 0.0, 0.102309, 0, 0, Vector2(0.189815, 0.426257), 0.0, 0.0, 0, 0, Vector2(0.427469, 0.756704), 0.0, 0.0, 0, 0, Vector2(0.773148, 0.397207), 0.0, 0.0, 0, 0, Vector2(0.998457, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="TubeTrailMesh" id="TubeTrailMesh_2h1v4"]
material = ExtResource("9_oeujn")
radius = 1.25
radial_steps = 4
section_length = 0.4
section_rings = 1
curve = SubResource("Curve_jelr0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kaajr"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_uyse4"]
material = SubResource("StandardMaterial3D_kaajr")
radius = 0.2
height = 0.4
radial_segments = 6
rings = 6

[node name="EnemySnake" type="CharacterBody3D" groups=["enemy_position"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_2ljk7")
height = 0.25
forward_velocity = 0.25
forward_velocity_multiplier_add_when_all_dead = 2.0
forward_velocity_multiplier_when_head_outside_screen = 0.25
curve_forward_velocity_gain = SubResource("Curve_hfjy5")
amplitude = 1.0
frequency = 0.1
extra_hp_per_body = 0.6
damage_per_body_kill = 0.75
explode_vfx = ExtResource("2_6c0i1")
entry_duration = 4.4
entry_duration_per_body = 0.1
entry_velocity_multiplier = 12.0
bodies_scenes = Array[PackedScene]([ExtResource("2_k0yf1"), ExtResource("3_fpqv0"), ExtResource("4_0b4rc"), ExtResource("6_ug3r6")])
bodies = Array[int]([0, 0, 1, 2])

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("feedback") groups=["enemy_healths"]]
script = ExtResource("6_mnrwv")
max_amount = 4.5
feedback = [NodePath("../Graphic")]
screen_shake_on_death = ExtResource("7_yimok")
feedback_ignore_contains_divided_by_commas = "Eye"

[node name="SnakeMovement" type="Node3D" parent="."]
script = ExtResource("1_au4vo")

[node name="BodiesContainer" type="Node3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_6nw2r")

[node name="Graphic" type="Node3D" parent="."]

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Graphic"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("TubeTrailMesh_2h1v4")
skeleton = NodePath("../..")

[node name="EyeR" type="MeshInstance3D" parent="Graphic/MeshInstance3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.428023, -0.521454, 0.245361)
mesh = SubResource("SphereMesh_uyse4")
skeleton = NodePath("../../..")

[node name="EyeL" type="MeshInstance3D" parent="Graphic/MeshInstance3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.321977, -0.521454, 0.245361)
mesh = SubResource("SphereMesh_uyse4")
skeleton = NodePath("../../..")

[node name="snake" parent="Graphic" instance=ExtResource("11_wxjdb")]

[node name="AccessibilityHighContrastObject" type="Node" parent="Graphic/snake"]
script = ExtResource("12_gu6xa")
high_contrast_group = &"enemy"
metadata/_custom_type_script = "uid://cr5xxhd04vkgu"

[node name="ScoreGiver" type="Node" parent="." node_paths=PackedStringArray("health", "point_position")]
script = ExtResource("8_iacpf")
info = ExtResource("13_hfjy5")
health = NodePath("../Health")
point_position = NodePath("../Graphic/MeshInstance3D2")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[connection signal="dead_parameterless" from="Health" to="." method="_on_health_dead_parameterless"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
